@@ -1,41 +1,39 @@
 package com.barbershop.citas.config;
 
-import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.security.config.Customizer;
+import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.web.SecurityFilterChain;
-import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder; // Import agregado
-import org.springframework.security.crypto.password.PasswordEncoder;     // Import agregado
+import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
+import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
-import java.util.Arrays;
 import java.util.List;
 
 @Configuration
 @EnableWebSecurity
 public class SecurityConfig {
 
-    @Value("${app.cors.allowed-origins}")
-    private String allowedOrigins;
-
-    // --- NUEVO BEAN AGREGADO ---
+    // --- BEAN OBLIGATORIO PARA ENCRIPTAR ---
     @Bean
     public PasswordEncoder passwordEncoder() {
         return new BCryptPasswordEncoder();
     }
-    // ---------------------------
+    // --------------------------------------
 
     @Bean
-    public SecurityFilterChain securityFilterChain(org.springframework.security.config.annotation.web.builders.HttpSecurity http) throws Exception {
+    public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
         http
-            .cors(Customizer.withDefaults()) // habilita CORS usando el bean de abajo
-            .csrf(csrf -> csrf.disable()) // desactiva CSRF
+            .cors(Customizer.withDefaults()) // Activa la config de abajo
+            .csrf(csrf -> csrf.disable())    // Desactiva CSRF (necesario para postman/angular en dev)
             .authorizeHttpRequests(auth -> auth
-                .anyRequest().permitAll() // permite todas las rutas
+                // Asegura acceso total a las rutas de usuarios
+                .requestMatchers("/api/v1/usuarios/**").permitAll()
+                .anyRequest().permitAll() // Permite todo lo demás por ahora
             );
 
         return http.build();
@@ -44,16 +42,14 @@ public class SecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration config = new CorsConfiguration();
-        // Asegúrate de que allowedOrigins no sea null en tu application.properties
-        if (allowedOrigins != null) {
-            config.setAllowedOrigins(Arrays.asList(allowedOrigins.split(",")));
-        } else {
-            config.setAllowedOrigins(List.of("*")); // Fallback por si la propiedad falla
-        }
+        
+        // MODIFICACIÓN IMPORTANTE:
+        // No uses "*" si allowCredentials es true. Usa la URL exacta de tu Angular.
+        config.setAllowedOrigins(List.of("http://localhost:4200"));
         
         config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
         config.setAllowedHeaders(List.of("*"));
-        config.setAllowCredentials(true);
+        config.setAllowCredentials(true); // Permite cookies o headers de autenticación
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", config);
